# agentic-ai-project-template

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd-aws.yml  cd-azure.yml  cd-gcp.yml  ci.yml
docs/: api.md  architecture.md  deployment.md
src/agents/: base_agent.py
src/graph/: base_graph.py
src/tools/: base_tool.py
src/utils/: config.py  logger.py
tests/integration/: test_example_integration.py
tests/unit/: test_example.py
