[project]
name = "project-name"  # Replace when using template
version = "0.1.0"
description = "Production Agentic AI System"  # Replace when using template
authors = [
    {name = "Suresh Kumar Maddala", email = "msk88.in@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
keywords = ["ai", "agents", "langgraph", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=1.2.0,<2.0.0",
    "langchain-community>=0.4.1,<0.5.0",
    "langchain-core>=1.2.5,<2.0.0",
    "langgraph>=1.0.5,<2.0.0",
    "langsmith>=0.5.1,<0.6.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.40.0,<0.41.0",
    "streamlit>=1.52.2,<2.0.0",
    "rich>=13.9.4,<14.0.0",
    "loguru>=0.7.0,<0.8.0",
    "pyyaml>=6.0.2,<7.0.0",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-aiplatform>=1.70.0,<2.0.0",
    "google-cloud-firestore>=2.20.0,<3.0.0",
    "google-cloud-storage>=2.18.0,<3.0.0",
    "langchain-google-vertexai>=2.0.0,<3.0.0",
]
aws = [
    "boto3>=1.35.0,<2.0.0",
#    "langchain-aws>=0.2.0,<0.3.0",
]
azure = [
    "azure-identity>=1.19.0,<2.0.0",
#    "azure-ai-inference>=1.0.0,<2.0.0",
#    "langchain-azure-ai>=0.1.0,<0.2.0",
]
vectordb = [
    "chromadb>=0.5.23,<0.6.0",
    "pinecone-client>=5.0.0,<6.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "black>=24.10.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=7.1.0,<8.0.0",
    "mypy>=1.14.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "jupyterlab>=4.3.0,<5.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # defaults
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "chromadb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "integration: mark tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
